# final_project

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
data/: q_learning_selfplay.csv  q_table.json
src/tictactoe/: __main__.py
src/tictactoe/core/: board.py  game.py  types.py
src/tictactoe/players/: base.py  human.py  mcts.py  qlearning.py
src/tictactoe/training/: serialize.py  train_q.py
src/tictactoe/ui/: cli.py  tk.py
tests/: test_board.py  test_bots.py  test_game.py
