[project]
name = "tictactoe"
version = "0.0.0"
description = "Tic-tac-toe with Q-learning and MCTS"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src/tictactoe --cov-report=term-missing"
